--- a/Clase 1/clase1_1.html
+++ b/Clase 1/clase1_1.html
@@ -9,19 +9,61 @@
 	<header>
 		<div class="encabezado-fondo">
 			<div class="encabezado">
-				<figure>
-					<img src="">
-				</figure>
-				<nav>
-					<ul>
-						<li><a href="#">Inicio</a></li>
-						<li><a href="#">Servicios</a></li>
-						<li><a href="#">Quienes somos?</a></li>
-						<li><a href="#">Contacto</a></li>
-					</ul>
-				</nav>
+				<div class="contenedor">
+					<figure>
+						<img src="img/logo.svg">
+					</figure>
+					<nav>
+						<ul>
+							<li><a href="#">Inicio</a></li>
+							<li><a href="#">Servicios</a></li>
+							<li><a href="#">Quienes somos?</a></li>
+							<li><a href="#">Contacto</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</div>
 	</header>
+	<section class="servicios">
+		<div class="contenedor">
+			<article>
+				<img src="img/koala.jpg">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			</article>
+			<article>
+				<img src="img/koala.jpg">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			</article>
+			<article>
+				<img src="img/koala.jpg">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			</article>
+			<article>
+				<img src="img/koala.jpg">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			</article>
+		</div>
+	</section>
 </body>
 </html>
